# backlight-controller

./: AndroidManifest.xml  README.md
res/layout/: input_hostname.xml  main.xml
res/menu/: menu.xml
res/values/: strings.xml
server/: .gitignore  Backlight.cabal  LICENSE  Main.hs  makefile  stack.yaml
server/app/: Main.hs
src/com/backlightcontroller/: BacklightActivity.java  BacklightAdjuster.java  ChangeProgress.java  Hostname.java  SendBrightness.java
